tests/compile-fail/dangling_pointers/dyn_size.stderr
error: Undefined Behavior: dereferencing pointer failed: alloc510 has size 4, so pointer to 5 bytes starting at offset 0 is out-of-bounds
  --> $DIR/dyn_size.rs:12:25
   |
12 |     let _ptr = unsafe { &*ptr }; //~ ERROR pointer to 5 bytes starting at offset 0 is out-of-bounds
   |                         ^^^^^ dereferencing pointer failed: alloc510 has size 4, so pointer to 5 bytes starting at offset 0 is out-of-bounds
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/dyn_size.rs:12:25

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

